@@ -1327,7 +1327,8 @@ Instructs the kernel to reboot the system.
 
 Usage: rm [OPTION]... FILE...
 
-Remove (unlink) the FILE(s).
+Remove (unlink) the FILE(s).  You may use '--' to 
+indicate that all following arguments are non-options.
 
 Options:
 
@@ -1946,4 +1947,4 @@ Enrique Zanardi <ezanardi@ull.es>
 
 =cut
 
-# $Id: busybox.pod,v 1.34 2000/06/05 17:23:06 andersen Exp $
+# $Id: busybox.pod,v 1.35 2000/06/06 16:15:23 andersen Exp $
